--- a/Muli-Bold.ufo/fontinfo.plist
+++ b/Muli-Bold.ufo/fontinfo.plist
@@ -63,15 +63,15 @@ http://scripts.sil.org/OFL
 	<array>
 	</array>
 	<key>styleMapStyleName</key>
-	<string>regular</string>
+	<string>Bold</string>
 	<key>styleName</key>
-	<string>Regular</string>
+	<string>Bold</string>
 	<key>trademark</key>
 	<string>Muli is a trademark of Vernon Adams and may be registered in certain jurisdictions.</string>
 	<key>unitsPerEm</key>
 	<integer>1000</integer>
 	<key>versionMajor</key>
-	<integer>1</integer>
+	<integer>2</integer>
 	<key>versionMinor</key>
 	<integer>0</integer>
 	<key>xHeight</key>
